Replaced HQL queries with criteria API code.